--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     
      </section>
 
-
+    <!-- new post form section -->
      <section id="new-post">
         <div class="new-post-title">
            <h1> New Blog Pos<span class="half-square">t</span> </h1>
@@ -319,7 +319,7 @@
 
    </main>
 
-
+    <!-- Footer -->
    <footer>
   
     <div class="footer-logo">
